--- a/app/src/main/res/layout/game_names_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_names_dialog_fragment.xml
@@ -16,8 +16,8 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/AlertDialogStyleMM"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -164,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:background="@android:color/transparent"
-                android:text="@string/save" />
+                tools:text="@string/save" />
 
         </LinearLayout>
 
