--- a/app/src/main/res/layout/main_oldgame_item.xml
+++ b/app/src/main/res/layout/main_oldgame_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -21,6 +20,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cvOldGameItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -38,26 +38,26 @@
                 android:id="@+id/rlOldGameItemTitleContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/half_standard_margin"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/half_standard_margin"
-                android:gravity="center_vertical"
                 android:layout_alignParentTop="true"
-                android:background="@color/colorPrimary">
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/half_standard_margin"
+                android:paddingBottom="@dimen/half_standard_margin">
 
                 <TextView
                     android:id="@+id/tvOldGameItemGameName"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginStart="@dimen/standard_margin"
                     android:layout_marginEnd="@dimen/standard_margin"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
                     android:gravity="center_vertical|start"
-                    android:layout_gravity="center_horizontal"
+                    android:maxLines="2"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:ellipsize="end"
-                    android:maxLines="2"
                     tools:text="Mahjong Madrid Championship 2024 blablablablabla" />
 
                 <TextView
@@ -303,36 +303,39 @@
             </LinearLayout>
 
             <!-- BUTTONS -->
-            <Button
+            <ImageButton
                 android:id="@+id/btOldGameItemDelete"
-                style="?android:buttonBarButtonStyle"
+                style="?android:actionButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/llOldGameItemBodyContainer"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="@dimen/half_standard_margin"
-                android:text="@string/delete" />
+                android:contentDescription="@string/delete"
+                android:src="@drawable/ic_bin"
+                card_view:tint="@color/colorAccent" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/btOldGameItemShare"
-                style="?android:buttonBarButtonStyle"
+                style="?android:actionButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/llOldGameItemBodyContainer"
-                android:layout_marginStart="@dimen/half_standard_margin"
-                android:layout_toStartOf="@+id/btOldGameItemResume"
-                android:text="@string/share" />
+                android:layout_toEndOf="@+id/btOldGameItemDelete"
+                android:contentDescription="@string/share"
+                android:src="@drawable/ic_share"
+                card_view:tint="@color/colorAccent" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/btOldGameItemResume"
-                style="?android:buttonBarButtonStyle"
+                style="?android:actionButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/llOldGameItemBodyContainer"
-                android:layout_marginStart="@dimen/half_standard_margin"
-                android:layout_marginEnd="@dimen/half_standard_margin"
-                android:layout_alignParentEnd="true"
-                android:text="@string/resume" />
+                android:layout_toEndOf="@+id/btOldGameItemShare"
+                android:contentDescription="@string/resume"
+                android:src="@drawable/ic_play_arrow_white_24px"
+                card_view:tint="@color/colorAccent" />
 
         </RelativeLayout>
 
