--- a/app/src/main/res/layout/main_oldgame_item.xml
+++ b/app/src/main/res/layout/main_oldgame_item.xml
@@ -21,6 +21,7 @@
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cvOldGameItem"
+        style="@style/RippleEffect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -41,34 +42,42 @@
                 android:layout_alignParentTop="true"
                 android:background="@color/colorPrimary"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/half_standard_margin"
-                android:paddingBottom="@dimen/half_standard_margin">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvOldGameItemGameName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/standard_margin"
-                    android:layout_marginEnd="@dimen/standard_margin"
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:gravity="center_vertical|start"
                     android:maxLines="2"
+                    android:paddingTop="@dimen/half_standard_margin"
+                    android:paddingBottom="@dimen/half_standard_margin"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     tools:text="Mahjong Madrid Championship 2024 blablablablabla" />
 
-                <TextView
-                    android:id="@+id/tvOldGameItemStartDate"
+                <ImageButton
+                    android:id="@+id/btOldGameItemDelete"
+                    style="?android:actionButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/standard_margin"
-                    android:gravity="center_vertical|end"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    tools:text="04/29/2017\n14:30" />
+                    android:contentDescription="@string/delete"
+                    android:src="@drawable/ic_bin"
+                    card_view:tint="@color/white" />
+
+                <ImageButton
+                    android:id="@+id/btOldGameItemShare"
+                    style="?android:actionButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/half_standard_margin"
+                    android:contentDescription="@string/share"
+                    android:src="@drawable/ic_share"
+                    card_view:tint="@color/white" />
 
             </LinearLayout>
 
@@ -79,19 +88,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rlOldGameItemTitleContainer"
                 android:baselineAligned="false"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/standard_margin"
-                android:paddingLeft="@dimen/standard_margin"
-                android:paddingTop="@dimen/standard_margin"
-                android:paddingEnd="@dimen/standard_margin"
-                android:paddingRight="@dimen/standard_margin">
+                android:orientation="horizontal">
 
                 <!-- SEATS -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/standard_margin">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -234,19 +239,28 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/standard_margin"
+                    android:layout_marginTop="@dimen/quarter_standard_margin"
+                    android:layout_marginBottom="@dimen/standard_margin"
                     android:layout_weight="1"
-                    android:baselineAligned="false"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    tools:ignore="NestedWeights">
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvOldGameItemStartDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|center_horizontal"
+                        android:gravity="center"
+                        tools:text="04/29/2017\n14:30" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/standard_margin"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/standard_margin"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        tools:ignore="NestedWeights">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -268,6 +282,7 @@
                         android:id="@+id/llOldGameItemItemBestHand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
                         android:layout_marginTop="@dimen/standard_margin"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -301,41 +316,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <!-- BUTTONS -->
-            <ImageButton
-                android:id="@+id/btOldGameItemDelete"
-                style="?android:actionButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/llOldGameItemBodyContainer"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="@dimen/half_standard_margin"
-                android:contentDescription="@string/delete"
-                android:src="@drawable/ic_bin"
-                card_view:tint="@color/colorAccent" />
-
-            <ImageButton
-                android:id="@+id/btOldGameItemShare"
-                style="?android:actionButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/llOldGameItemBodyContainer"
-                android:layout_toEndOf="@+id/btOldGameItemDelete"
-                android:contentDescription="@string/share"
-                android:src="@drawable/ic_share"
-                card_view:tint="@color/colorAccent" />
-
-            <ImageButton
-                android:id="@+id/btOldGameItemResume"
-                style="?android:actionButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/llOldGameItemBodyContainer"
-                android:layout_toEndOf="@+id/btOldGameItemShare"
-                android:contentDescription="@string/resume"
-                android:src="@drawable/ic_play_arrow_white_24px"
-                card_view:tint="@color/colorAccent" />
 
         </RelativeLayout>
 
