--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="standard_and_quarter_margin">24dp</dimen>
     <dimen name="standard_and_half_margin">24dp</dimen>
     <dimen name="second_standard_margin">32dp</dimen>
+    <dimen name="second_standard_and_half_margin">40dp</dimen>
     <dimen name="third_standard_margin">48dp</dimen>
     <dimen name="fourth_standard_margin">64dp</dimen>
 
