--- a/app/src/main/res/menu/combinations_menu.xml
+++ b/app/src/main/res/menu/combinations_menu.xml
@@ -20,14 +20,14 @@
 
     <item
         android:id="@+id/action_search_combination"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:icon="@drawable/ic_search"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_toggle_combination_explanation"
-        android:icon="@drawable/ic_photo_library_white_24dp"
+        android:icon="@drawable/ic_photos"
         android:title="@string/toggle_descriptions"
         app:showAsAction="ifRoom" />
 
