--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -26,7 +26,7 @@
 
     <item
         android:id="@+id/action_combinations"
-        android:icon="@drawable/ic_library_books_white_24dp"
+        android:icon="@drawable/ic_books"
         android:title="@string/combinations"
         app:showAsAction="ifRoom" />
 
