Diffs calcs showing and enabling improved

--- a/app/src/main/res/layout/game_action_dialog_diffs.xml
+++ b/app/src/main/res/layout/game_action_dialog_diffs.xml
@@ -20,7 +20,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tlActionDialogDiffs"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    tools:visibility="visible">
 
     <TableRow>
 
