--- a/app/src/main/res/layout/game_table_seats_fragment.xml
+++ b/app/src/main/res/layout/game_table_seats_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -16,23 +15,31 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@color/grayLight">
 
-    <View
-        android:id="@+id/vTableSeatsCenterView"
+    <ImageButton
+        android:id="@+id/btTableSeatsShowDiffs"
         android:layout_width="@dimen/third_standard_margin"
         android:layout_height="@dimen/third_standard_margin"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:background="@android:color/transparent"
+        android:importantForAccessibility="no"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_calc"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        app:tint="@color/gray" />
 
     <include
         android:id="@+id/iGameTableSeatEast"
         layout="@layout/game_table_seat_east"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/vTableSeatsCenterView"
+        android:layout_below="@+id/btTableSeatsShowDiffs"
         android:layout_centerHorizontal="true" />
 
     <include
@@ -41,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/vTableSeatsCenterView"
+        android:layout_toRightOf="@+id/btTableSeatsShowDiffs"
         tools:ignore="RtlHardcoded" />
 
     <include
@@ -49,7 +56,7 @@
         layout="@layout/game_table_seat_west"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/vTableSeatsCenterView"
+        android:layout_above="@+id/btTableSeatsShowDiffs"
         android:layout_centerHorizontal="true" />
 
     <include
@@ -58,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/vTableSeatsCenterView"
+        android:layout_toLeftOf="@+id/btTableSeatsShowDiffs"
         tools:ignore="RtlHardcoded" />
 
 </RelativeLayout>
