--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -26,4 +26,16 @@
         app:showAsAction="never"
         tools:targetApi="o" />
 
+    <item
+        android:id="@+id/action_enable_diffs_calcs"
+        android:title="@string/enable_diffs_calcs"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_disable_diffs_calcs"
+        android:title="@string/disable_diffs_calcs"
+        android:visible="false"
+        app:showAsAction="never" />
+
 </menu>
