Little improvement at ranking dialog

--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -211,10 +211,11 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvRankingDialogBestHandTitle"
                     style="@style/tvRankingDialogOthers"
                     android:textSize="16sp"
                     android:layout_weight="1"
-                    android:text="@string/best_hand" />
+                    tools:text="@string/best_hand" />
 
                 <TextView
                     android:id="@+id/tvRankingDialogBestHandPlayerPoints"
